<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/button_background"
    android:padding="16dp">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_edit_titleTV"
        android:textAppearance="?android:textAppearanceMedium" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:layout_marginTop="8dp"
        android:hint="@string/event_edit_title"
        android:inputType="text" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleEditText"
        android:layout_marginTop="16dp"
        android:text="@string/event_edit_descriptionTV"
        android:textAppearance="?android:textAppearanceMedium" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/descriptionTextView"
        android:layout_marginTop="8dp"
        android:hint="@string/event_edit_enter_description"
        android:inputType="text" />

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/descriptionEditText"
        android:layout_marginTop="16dp"
        android:text="@string/event_edit_timeTV"
        android:textAppearance="?android:textAppearanceMedium" />

    <EditText
        android:id="@+id/timeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="false"
        android:focusable="false"
        android:layout_below="@id/timeTextView"
        android:layout_marginTop="8dp"
        android:hint="@string/event_edit_enter_time"
        android:inputType="time" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timeEditText"
        android:layout_marginTop="16dp"
        android:text="@string/event_edit_dateTV"
        android:textAppearance="?android:textAppearanceMedium" />

    <EditText
        android:id="@+id/dateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="false"
        android:focusable="false"
        android:layout_below="@id/dateTextView"
        android:layout_marginTop="8dp"
        android:hint="@string/event_edit_enter_date"
        android:inputType="date"/>

    <TextView
        android:id="@+id/typeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dateEditText"
        android:layout_marginTop="16dp"
        android:text="@string/event_edit_typeTV"
        android:textAppearance="?android:textAppearanceMedium" />

    <EditText
        android:id="@+id/typeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/typeTextView"
        android:layout_marginTop="8dp"
        android:hint="@string/event_edit_enter_type"
        android:inputType="text" />

    <Button
        android:id="@+id/updateButton"
        android:background="@drawable/oval_button"
        android:layout_width="match_parent"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        android:layout_below="@id/typeEditText"
        android:layout_marginTop="16dp"
        android:text="Update" />

    <LinearLayout
        android:id="@+id/progressDialogLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/updateButton"
        android:gravity="center"
        android:layout_marginLeft="300dp"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_gravity="center_horizontal">

        <ProgressBar
            android:layout_width="wrap_content"
            android:paddingLeft="20dp"
            android:layout_height="wrap_content"
            android:indeterminate="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Saving event..."
            android:textColor="@android:color/white" />

    </LinearLayout>
</RelativeLayout>
