<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button_background"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_title"
        android:textSize="18sp"
        android:padding="12dp" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_description"
        android:textSize="18sp"
        android:padding="12dp" />

    <EditText
        android:id="@+id/timeEditText"
        android:layout_width="match_parent"
        android:editable="false"
        android:layout_height="wrap_content"
        android:hint="@string/event_time"
        android:focusable="false"
        android:textSize="18sp"
        android:padding="12dp" />

    <EditText
        android:id="@+id/dateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="false"
        android:hint="@string/event_date"
        android:textSize="18sp"
        android:focusable="false"
        android:padding="12dp" />

    <EditText
        android:id="@+id/typeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_type"
        android:textSize="18sp"
        android:padding="12dp" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_event"
        android:textAllCaps="false"
        android:background="@drawable/oval_button"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:id="@+id/progressDialogLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_gravity="center_horizontal">

        <ProgressBar
            android:layout_width="wrap_content"
            android:paddingLeft="20dp"
            android:layout_height="wrap_content"
            android:indeterminate="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Saving event..."
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>