<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button_background">

    <Button
        android:id="@+id/btnAdminViewEvent"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:text="@string/view_events"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:background="@drawable/square_button"
        tools:ignore="ContentDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnAddEvent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnAdminLogout"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btnAddEvent"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/square_button"
        android:text="@string/add_events"
        android:textAllCaps="false"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/btnAdminViewEvent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnAddKnowledgeBase"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/btnAdminLogout"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/square_button"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnAddKnowledgeBase"
        app:layout_constraintTop_toBottomOf="@+id/btnAdminViewEvent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/btnAddKnowledgeBase"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/square_button"
        android:text="@string/AddKnowledgeBase"
        android:textAllCaps="false"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/btnAdminLogout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddEvent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
